@@ -368,10 +368,10 @@ and explicit roles for \emph{standard} \textbf{inline}
 
 Let's test wrapping and whitespace significance in inline literals:
 \texttt{This is an example of -{}-inline-literal -{}-text, -{}-including some-{}-
-strangely-{}-hyphenated-words.  Adjust-the-width-of-your-browser-window
-to see how the text is wrapped.  -{}- -{}-{}-{}- -{}-{}-{}-{}-{}-{}-{}-  Now note    the
-spacing    between the    words of    this sentence    (words
-should    be grouped    in pairs).}
+strangely-{}-hyphenated-words. ~Adjust-the-width-of-your-browser-window
+to see how the text is wrapped. ~-{}- -{}-{}-{}- -{}-{}-{}-{}-{}-{}-{}- ~Now note ~ ~the
+spacing ~ ~between the ~ ~words of ~ ~this sentence ~ ~(words
+should ~ ~be grouped ~ ~in pairs).}
 
 If the \texttt{-{}-pep-references} option was supplied, there should be a
 live link to PEP 258 here.
